@@ -325,7 +325,8 @@ char *msg_sisreject     = "sister rejected";
 char *msg_toomany       = "Too many submit retries";
 char *msg_jobtype       = "Wrong job type";
 char *msg_badaclhost	= "Bad ACL entry in host list";
-
+char *msg_nointeractive = "Queue does not allow interactive jobs";
+char *msg_nobatch       = "Queue does not allow batch jobs";
 /*
  * The following table connects error numbers with text
  * to be returned to the client.  Each is guaranteed to be pure text.
@@ -412,6 +413,8 @@ struct pbs_err_to_txt pbs_err_to_txt[] = {
         { PBSE_TOOMANY, &msg_toomany },
 	{ PBSE_JOBTYPE, &msg_jobtype },
         { PBSE_BADACLHOST, &msg_badaclhost },
+        { PBSE_NOINTERACTIVE, &msg_nointeractive },
+        { PBSE_NOBATCH, &msg_nobatch },
         { PBSE_NONE, &msg_none },
 	{ 0, (char **)0 }		/* MUST be the last entry */
 };
